Squashing final bugs? Maybe

--- a/css/main.css
+++ b/css/main.css
@@ -105,12 +105,6 @@ button, .fundraiser a, .submit, .merchBuy a{
 	font-family: 'libre_franklin-medium', Helvetica, sans-serif;
 	font-size: 20px;
 	cursor: pointer;
-	transition: all 0.1s linear;
-}
-
-/*Adds transitions to buttons*/
-button:active, .fundraiser a:active, .submit:active
-{
 	transition: all 0.15s linear;
 }
 
@@ -1178,6 +1172,16 @@ button:active, .fundraiser a:active, .submit:active
 	min-height: 500px;
 }
 
+/*Styles donate button*/
+.donateNow
+{
+	display: block;
+	margin: 0 auto;
+	margin-bottom: 20px;
+	padding: 20px 50px 50px 50px;
+	font-size: 25px;
+}
+
 /*Adds space between list items*/
 .fundraisingCon ul li
 {
@@ -1523,6 +1527,18 @@ button:active, .fundraiser a:active, .submit:active
 		font-size: 14px;
 		margin-bottom: 0px;
 	}
+
+	/**/
+	/*EVENT RULES*/
+	/*Sizes the arrows*/
+	.prevSlide, .nextSlide
+	{
+		width: 35px;
+		height: 35px;
+		background-color: rgb(51,51,51);
+		background-color: rgba(51,51,51,0.8);
+		border-radius: 50%;
+	}
 	
 	/**/
 	/*MERCHANDISE RULES*/
@@ -1822,7 +1838,7 @@ button:active, .fundraiser a:active, .submit:active
 	}
 
 	/*Adds hovers to buttons*/
-	#memberJoin:hover, .fundraiser a:hover, .merchBuy a:hover, .submit:hover
+	button:hover, #memberJoin:hover, .fundraiser a:hover, .merchBuy a:hover, .submit:hover
 	{
 		-webkit-box-shadow:inset 0px 0px 0px 3px #c09233;
 	    -moz-box-shadow:inset 0px 0px 0px 3px #c09233;
